# somsys

./: README.md  db1.sqlite3  manage.py  pyproject.toml  requirements.txt  requirements1.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_structure_alter_oauser_department.py  0003_delete_department.py
common/templatetags/: getitem_tag.py
cost/: admin.py  forms.py  models.py  urls.py  views.py
cost/migrations/: 0001_initial.py  0002_alter_budget_businessentity_alter_budgetyear_year.py  0002_alter_budget_cdate_alter_budget_lcdate_and_more.py  0002_alter_budget_department_alter_pay_department.py  0003_alter_pay_transactor.py  0003_pay_project.py  0004_budgetyear_alter_budget_year.py  0005_alter_budget_remark_alter_pay_remark.py  0006_budget_cuser_budget_lcuser_pay_cuser_pay_lcuser.py
cost/templatetags/: cost_tag.py
kanban/: urls.py  views.py
projects/: admin.py  forms.py  models.py  urls.py  views.py  views_ajax.py
projects/migrations/: 0001_initial.py  0002_alter_project_task_state.py  0002_alter_project_transactor.py  0002_schedule_content_alter_project_remark_and_more.py  0003_alter_project_transactor_alter_schedule_transactor.py  0003_project_cuser_project_lcuser_schedule_cuser_and_more.py  0003_schedule_task_type_alter_project_task_state.py  0004_alter_project_department_alter_schedule_department.py  0004_project_content.py  (+4 more)
scripts/: fake.py
somsys/: asgi.py  settings.py  urls.py  wsgi.py
static/: temp.html
tasks/: models.py
templates/: base.html
whls/: Faker-11.3.0-py3-none-any.whl
(+44 files in other folders)
