[tool.poetry]
name = "somsys"
version = "0.1.0"
description = ""
authors = ["cyyy"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
faker = "^11.3.0"
pymysql = "^1.0.2"
gunicorn = "^20.1.0"
django-contrib-comments = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"